z-index in Navbar Fixes Richtext in front

--- a/src/sass/Navbar.scss
+++ b/src/sass/Navbar.scss
@@ -7,7 +7,7 @@ header {
     background-color: $headerColor;
     position: fixed;
     top: 0;
-    z-index: 100;
+    z-index: 1001;
     width: 100%;
     padding: 5px 15px;
 
